[gd_scene load_steps=6 format=3 uid="uid://dqqe25mgl8xs1"]

[ext_resource type="Script" uid="uid://grxcye8xs433" path="res://Scripts/Windows/web_radio.gd" id="1_eagp5"]
[ext_resource type="PackedScene" uid="uid://utagi2eh5w54" path="res://Scenes/Other/titlebar.tscn" id="2_eagp5"]
[ext_resource type="Script" uid="uid://bkhrg412h0okm" path="res://Scripts/web_radio_stream_player.gd" id="3_eagp5"]

[sub_resource type="InputEventAction" id="InputEventAction_eagp5"]
action = &"Playback Control"

[sub_resource type="Shortcut" id="Shortcut_xg4oh"]
events = [SubResource("InputEventAction_eagp5")]

[node name="FooBar 1984" type="Panel" node_paths=PackedStringArray("previous_button", "play_pause_button", "next_button", "name_label", "url_label", "listening_time_label", "count_label", "current_player")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -852.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eagp5")
station_names = PackedStringArray("BBC World Service", "24/7 Lofi", "Nightwave Plaza")
station_urls = PackedStringArray("https://stream.live.vc.bbcmedia.co.uk/bbc_world_service", "http://usa9.fastcast4u.com/proxy/jamz?mp=/1", "https://radio.plaza.one/mp3")
previous_button = NodePath("Sorter/MarginContainer/VBoxContainer/Buttons/Previous")
play_pause_button = NodePath("Sorter/MarginContainer/VBoxContainer/Buttons/PlayPause")
next_button = NodePath("Sorter/MarginContainer/VBoxContainer/Buttons/Next")
name_label = NodePath("Sorter/MarginContainer/VBoxContainer/Name")
url_label = NodePath("Sorter/MarginContainer/VBoxContainer/URL")
listening_time_label = NodePath("Sorter/MarginContainer/VBoxContainer/Listening Time")
count_label = NodePath("Sorter/MarginContainer/VBoxContainer/Buttons/Count")
current_player = NodePath("WebRadioStreamPlayer")
starting_size = Vector2(300, 200)

[node name="Sorter" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Titlebar" parent="Sorter" instance=ExtResource("2_eagp5")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Sorter"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Sorter/MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Sorter/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Nightwave Plaza"

[node name="URL" type="RichTextLabel" parent="Sorter/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
bbcode_enabled = true
text = "[color=gray]https://plaza.one/"

[node name="Listening Time" type="RichTextLabel" parent="Sorter/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
bbcode_enabled = true
text = "Loading..."

[node name="Buttons" type="HBoxContainer" parent="Sorter/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Previous" type="Button" parent="Sorter/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
flat = true
icon_alignment = 1
expand_icon = true

[node name="PlayPause" type="Button" parent="Sorter/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
shortcut = SubResource("Shortcut_xg4oh")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Next" type="Button" parent="Sorter/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
flat = true
icon_alignment = 1
expand_icon = true

[node name="Count" type="Label" parent="Sorter/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "1/10"
horizontal_alignment = 2

[node name="WebRadioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("3_eagp5")
combined_url = "https://stream.live.vc.bbcmedia.co.uk/bbc_world_service"
should_play = true
metadata/_custom_type_script = "uid://bkhrg412h0okm"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Sorter/MarginContainer/VBoxContainer/Buttons/Previous" to="." method="_previous_player"]
[connection signal="pressed" from="Sorter/MarginContainer/VBoxContainer/Buttons/PlayPause" to="." method="_play_pause"]
[connection signal="pressed" from="Sorter/MarginContainer/VBoxContainer/Buttons/Next" to="." method="_next_player"]
[connection signal="loaded" from="WebRadioStreamPlayer" to="." method="loaded"]
[connection signal="unloaded" from="WebRadioStreamPlayer" to="." method="unloaded"]
[connection signal="unloaded" from="WebRadioStreamPlayer" to="WebRadioStreamPlayer" method="unload_all_tracks"]
